--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,9 @@
 [tox]
 envlist =
     py26-1.4, py26-1.5, py26-1.6,
-    py27-1.4, py27-1.5, py27-1.6,
-    py32-1.5, py32-1.6,
-    py33-1.5, py33-1.6,
+    py27-1.4, py27-1.5, py27-1.6, py27-1.7,
+    py32-1.5, py32-1.6, py32-1.7,
+    py33-1.5, py33-1.6, py33-1.7,
     flake8
 
 
@@ -34,6 +34,12 @@ deps =
     django >= 1.6, < 1.7
     coverage == 3.6
 
+[testenv:py26-1.7]
+basepython = python2.6
+deps =
+    https://github.com/django/django/archive/1.7a2.zip
+    coverage == 3.6
+
 
 [testenv:py27-1.4]
 basepython = python2.7
@@ -53,6 +59,12 @@ deps =
     django >= 1.6, < 1.7
     coverage == 3.6
 
+[testenv:py27-1.7]
+basepython = python2.7
+deps =
+    https://github.com/django/django/archive/1.7a2.zip
+    coverage == 3.6
+
 
 [testenv:py32-1.5]
 basepython = python3.2
@@ -64,6 +76,12 @@ deps =
 basepython = python3.2
 deps =
     django >= 1.6, < 1.7
+    coverage == 3.6
+
+[testenv:py32-1.7]
+basepython = python3.2
+deps =
+    https://github.com/django/django/archive/1.7a2.zip
     coverage == 3.6
 
 
@@ -78,4 +96,10 @@ deps =
 basepython = python3.3
 deps =
     django >= 1.6, < 1.7
+    coverage == 3.6
+
+[testenv:py33-1.7]
+basepython = python3.3
+deps =
+    https://github.com/django/django/archive/1.7a2.zip
     coverage == 3.6
